--- a/index.html
+++ b/index.html
@@ -37,7 +37,42 @@
 				<div class="logo__tagline">Don&#39;t have a motto</div>
 			</a>
 		</div>
-		<div class="divider"></div>
+		
+<nav class="menu">
+	<button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
+		<span class="menu__btn-title" tabindex="-1">Menu</span>
+	</button>
+	<ul class="menu__list">
+		<li class="menu__item menu__item--active">
+			<a class="menu__link" href="/">主页</a>
+		</li>
+		<li class="menu__item">
+			<a class="menu__link" href="/post/research/">科研</a>
+		</li>
+		<li class="menu__item">
+			<a class="menu__link" href="/post/reading/">阅读</a>
+		</li>
+		<li class="menu__item">
+			<a class="menu__link" href="/post/mathematics/">数学</a>
+		</li>
+		<li class="menu__item">
+			<a class="menu__link" href="/post/algorithm/">算法</a>
+		</li>
+		<li class="menu__item">
+			<a class="menu__link" href="/post/programming/">编程</a>
+		</li>
+		<li class="menu__item">
+			<a class="menu__link" href="/post/music/">音乐</a>
+		</li>
+		<li class="menu__item">
+			<a class="menu__link" href="/archives/">归档</a>
+		</li>
+		<li class="menu__item">
+			<a class="menu__link" href="/about/">关于</a>
+		</li>
+	</ul>
+</nav>
+
 	</div>
 </header>
 		<div class="wrapper flex">
