Publishing to master (publish.sh)

--- a/404.html
+++ b/404.html
@@ -24,6 +24,26 @@
 	
 	<link rel="shortcut icon" href="/favicon.ico">
 		
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-138182815-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
+		<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?7a63b4b69f38010f0e7752175e4bd8a7";
+		  var s = document.getElementsByTagName("script")[0];
+		  s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
 </head>
 <body class="body">
 	<div class="container container--outer">
@@ -103,6 +123,7 @@
 		</div>
 	</div>
 </div>
+<script type='text/javascript' id='clustrmaps' src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&amp;w=220&amp;t=tt&amp;d=TAjQZD4Wgh-rcw7pVYB3CM1ZQ0Pu7xodl0C5q4J9Z_4&amp;co=8eb6d2"></script>
 </aside>
 		</div>
 		<footer class="footer">
